# bevy-playground

./: .gitignore  Cargo.toml  Makefile  index.html  models.blend
assets/: grass-tile.glb  models.glb  models.gltf
pkg/: bevy_playground.js
src/: aim_system.rs  camera.rs  debug.rs  debug_physics.rs  level.rs  lib.rs  main.rs  movement.rs  player.rs  view_system.rs
src/mesh_loader/: gltf.rs  mod.rs
