[package]
name = "bevy-playground"
version = "0.0.1"
authors = ["Dylan"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bevy-playground"


[dependencies]
log = "0.4"
# env_logger = "0.7"

rand = "0.8.4"

wasm-bindgen = "0.2"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render", "bevy_gltf", "bevy_wgpu", "x11"]}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render", "bevy_gltf"]}
bevy_webgl2 = "0.5"