[package]
name = "bevy-playground"
version = "0.0.1"
authors = ["Dylan"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bevy-playground"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[dependencies]
log = "0.4"
anyhow = "1.0"
# env_logger = "0.7"

rand = "0.8.4"

wasm-bindgen = "0.2"

bevy_rapier3d = { version = "0.10", features = [ "wasm-bindgen" ] }

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render", "bevy_gltf", "bevy_wgpu", "x11"]}
# TODO make this only for debug builds
bevy_prototype_debug_lines = "0.3"

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render", "bevy_gltf"]}
bevy_webgl2 = "0.5"